Includes MODAPTO Module name in Notifications and refactors process of event handling